message NetParamter {
  required fixed32 word_dim = 1;
  required fixed32 hidden_dim = 2;
  required fixed32 bptt_truncate = 3;
  optional double learingRate = 4;
  repeated double U = 5 [packed=true];
  repeated double W = 6 [packed=true];
  repeated double V = 7 [packed=true];
}